# hw-json-demo

./: CHANGELOG.md  README.md  circle.yml  hw-json-demo.cabal  package.yaml  project.sh
.circleci/: config.yml
data/: 100-records.json  2-records.json  3-records.json  5000-bad.json  5000B.json
src/HaskellWorks/Data/Json/: Demo.hs
test/HaskellWorks/Data/Json/Demo/Examples/: Example1.hs  Example2.hs  Example3.hs  Example4.hs
