name:                   hw-json-demo
version:                0.1.0.0
synopsis:               Demo library
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-json#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Json.Demo
  build-depends:        base                          >= 4          && < 5
                      , aeson
                      , array
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , deepseq
                      , dlist
                      , hw-bits
                      , hw-conduit
                      , hw-excess                     >= 0.0.0.1
                      , hw-json                       >= 0.4.0.0
                      , hw-json-mquery
                      , hw-mquery                     >= 0.1.0.1
                      , hw-diagnostics
                      , hw-parser
                      , hw-prim                       >= 0.4.0.0
                      , hw-rankselect                 >= 0.5.0.0
                      , hw-rankselect-base            >= 0.1.0.0
                      , mmap
                      , mono-traversable
                      , resourcet
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-json-demo
