cabal-version:       2.2

name:                 hw-json-demo
version:              0.1.0.0
synopsis:             Demo JSON project
homepage:             https://github.com/haskellworks/hw-json-demo
license:              BSD-3-Clause
license-file:         LICENSE
author:               John Ky
maintainer:           newhoggy@gmail.com
copyright:            John Ky 2019
category:             Data
build-type:           Simple
extra-source-files:   CHANGELOG.md

common base                     { build-depends: base                     >= 4          && < 5      }

common hw-json                  { build-depends: hw-json                  >= 1.3.1.1    && < 1.4    }
common hspec                    { build-depends: hspec                    >= 2.4        && < 3      }

common config
  default-language:    Haskell2010

library
  import:               base, config
                      , hw-json
  exposed-modules:
  other-modules:
  other-extensions:
  hs-source-dirs:       src

executable hw-json-demo
  main-is:              Main.hs
  other-modules:
  other-extensions:
  hs-source-dirs:       app


test-suite hw-json-demo-test
  import:               base, config
                      , hspec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
  other-extensions:
  build-tool-depends:   hspec-discover:hspec-discover
  hs-source-dirs:       test
