cabal-version: 2.2

name:                   hw-json-demo
version:                0.1.0.0
synopsis:               Demo JSON project
description:            Demo JSON project.
homepage:               https://github.com/haskellworks/hw-json-demo
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky 2019
category:               Data
tested-with:            GHC == 8.10.2, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
build-type:             Simple
extra-source-files:     CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-json

common base                     { build-depends: base                     >= 4          && < 5      }

common aeson                    { build-depends: aeson                    >= 1.4.3.0    && < 1.6    }
common bytestring               { build-depends: bytestring               >= 0.10.6     && < 0.11   }
common dlist                    { build-depends: dlist                    >= 0.8.0.7    && < 0.9    }
common doctest                  { build-depends: doctest                  >= 0.16.2     && < 0.19   }
common doctest-discover         { build-depends: doctest-discover         >= 0.2        && < 0.3    }
common hw-json                  { build-depends: hw-json                  >= 1.3.1.1    && < 1.4    }
common hw-json-standard-cursor  { build-depends: hw-json-standard-cursor  >= 0.2.0.1    && < 0.3    }
common hw-mquery                { build-depends: hw-mquery                >= 0.2.0.2    && < 0.3    }
common hw-prim                  { build-depends: hw-prim                  >= 0.6.2.32   && < 0.7    }
common hspec                    { build-depends: hspec                    >= 2.4        && < 3      }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall

common hw-json-demo
  build-depends:        hw-json-demo

library
  import:               base, config
                      , aeson
                      , bytestring
                      , hw-json
                      , hw-json-standard-cursor
                      , hw-prim
  exposed-modules:
  other-modules:
  other-extensions:
  hs-source-dirs:       src

executable hw-json-demo
  import:               base, config
  main-is:              Main.hs
  other-modules:
  other-extensions:
  hs-source-dirs:       app


test-suite hw-json-demo-test
  import:               base, config
                      , aeson
                      , bytestring
                      , dlist
                      , hspec
                      , hw-json
                      , hw-json-standard-cursor
                      , hw-mquery
                      , hw-prim
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.Json.Demo.Examples.Example1
                        HaskellWorks.Data.Json.Demo.Examples.Example2
                        HaskellWorks.Data.Json.Demo.Examples.Example3
                        HaskellWorks.Data.Json.Demo.Examples.Example4
  other-extensions:
  build-tool-depends:   hspec-discover:hspec-discover
  hs-source-dirs:       test

test-suite doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , hw-json-demo
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       doctest
  build-tool-depends:   doctest-discover:doctest-discover
